<resources>
    <string name="app_name">Warehouse Client</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_tyre">Add new tyre</string>
    <string name="change">Change:</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="product_id">Product ID:</string>
    <string name="find">Find</string>
    <string name="producer">Producer:</string>
    <string name="model">Model:</string>
    <string name="rim_size">Rim size:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="modified_id">Modified ID:</string>
    <string name="modify_tyre">Modify tyre</string>
    <string name="change_quantity">Change quantity</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="add">Add</string>
    <string name="show_all">Show all</string>
    <string name="show_by_id">Show by ID</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="synchronize">Synchronize</string>
</resources>
