<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="40dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/modify_producer_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producer"
                android:textSize="30sp" />

            <Space
                android:layout_width="37dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/modify_producer_input"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/modify_model_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textSize="30sp" />

            <Space
                android:layout_width="73dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/modify_model_input"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/modify_rim_size_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rim_size"
                android:textSize="30sp" />

            <Space
                android:layout_width="45dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/modify_rim_size_input"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/modify_price_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="30sp" />

            <Space
                android:layout_width="90dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/modify_price_input"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/modify_quantity_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="30sp" />

            <Space
                android:layout_width="42dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/modify_quantity_input"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:id="@+id/modify_id_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modified_id"
                android:textSize="30sp" />

            <Space
                android:layout_width="2dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/modify_id_input"
                android:layout_width="225dp"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/modify_modify_tyre_button"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:text="@string/modify_tyre" />
        </TableRow>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>