<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/id_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_id"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/id_value"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="placeholder"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/rim_size_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rim_size"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="58dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/rim_size_value"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="placeholder"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="60dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/quantity_value"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="placeholder"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/producer_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/producer"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/producer_value"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="placeholder"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/model_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="86dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/model_value"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="placeholder"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="30sp" />

                <Space
                    android:layout_width="104dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/price_value"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="placeholder"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingVertical="100dp">

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:text="@string/back" />
            </TableRow>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>