<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.main.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="40dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/log_in_login_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/log_in_password_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:text="@string/register" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/log_in_button"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:text="@string/sign_in" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/log_in_google_button"
                    android:layout_width="200dp"
                    android:layout_height="70dp" />
            </TableRow>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>